# TranslatorKyi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Data.ini  FilePath.h  README.md  Tool.cpp  Tool.h  Variable.cpp  Variable.h  application.cpp  application.h  base.h  ini.h  launch.vs.json  main.cpp  main.h  resource.rc
AngelScript/: AngelScriptCode.cpp  AngelScriptCode.h  CMakeLists.txt  FunctionalFunctions.cpp  FunctionalFunctions.h
Function/: CMakeLists.txt  Hitokoto.cpp  Hitokoto.h  PileUp.h  Responsivity.cpp  Translate.cpp  Translate.h  WebDav.cpp  WebDav.h  opcode.cpp  opcode.h  tesseract.cpp  tesseract.h
ImGui/: CMakeLists.txt  GUI.h  Interface.cpp  Interface.h  imgui_internal.h
Language/: eng.ini  zh.ini
Opcode/: D.cpp  NEWDLL.bat  Replace.Opcode  Script.as  Select.Opcode  ceshi
TessData/: illustrate.txt
Tool/: CMakeLists.txt  Tool.cpp  Tool.h
Vulkan/: Window.cpp  Window.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  description.h  descriptorPool.cpp  descriptorPool.h  descriptorSet.cpp  descriptorSet.h  descriptorSetLayout.cpp  descriptorSetLayout.h  device.cpp  device.h  fence.cpp  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  swapChain.cpp  swapChain.h  windowSurface.cpp  windowSurface.h
imgui/: GUI.h  imgui.cpp
texture/: texture.cpp  texture.h
